<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Main Menu"
        android:id="@+id/mainMenuTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/abc_primary_text_material_light" />

    <Button
        android:id="@+id/listTripsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Trip List"
        android:onClick="onClick"
        android:layout_below="@+id/mainMenuTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <Button
        android:id="@+id/editTemplateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Template"
        android:onClick="onClick"
        android:layout_below="@+id/createTemplateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <Button
        android:id="@+id/createTemplateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Template"
        android:onClick="onClick"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/listTripsButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/createNewItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create New Item"
        android:onClick="onClick"
        android:layout_below="@+id/editTemplateButton"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/editItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Item"
        android:onClick="onClick"
        android:layout_below="@+id/createNewItemButton"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
